--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
 
 main p {
     font-size: 1.6rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .slider {
@@ -62,6 +62,16 @@ main p {
 
 .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
+    appearance: none;
+    height: 1.5rem;
+    width: 1.5rem;
+    background: linear-gradient(to bottom, green, rgb(0, 23, 128));
+    border-radius: 50%;
+    box-shadow: 0px 0px 4px 3px rgba(0, 41, 10, 0.808);
+}
+
+.slider::-moz-range-thumb {
+    -moz-appearance: none;
     appearance: none;
     height: 1.5rem;
     width: 1.5rem;
