--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: transparent;
 }
 
 #logo {
@@ -41,11 +42,13 @@ main {
     margin-bottom: 2rem;
     color: green;
     text-shadow: 1px 2px #063228;
+    background: transparent;
 }
 
 main p {
     font-size: 1.6rem;
     margin-bottom: 2rem;
+    background: transparent;
 }
 
 .slider {
@@ -101,12 +104,14 @@ main p {
     flex-direction: column;
     text-align: center;
     margin-top: 4rem;
+    background: transparent;
 }
 
 #title {
     font-size: 1.8rem;
     font-weight: bold;
     margin-bottom: 1rem;
+    background: transparent;
 }
 
 #password {
